--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-tests/data/SEPA_River_Levels_Web.csv
-tests/data/river-sections.json
+data/SEPA_River_Levels_Web.csv
+data/river-sections.json
 config/database.php
