rivers readings data implementation

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@ data/SEPA_River_Levels_Web.csv
 data/river-sections.json
 data/*.csv
 config/database.php
+tests/data/rivers_download_timestamp
+tests/data/10048-SG.csv
+tests/data/9514-SG.csv
