--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ config/database.php
 tests/data/rivers_download_timestamp
 tests/data/10048-SG.csv
 tests/data/9514-SG.csv
+data/rivers-readings-written.json
