--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ tests/data/rivers_download_timestamp
 tests/data/10048-SG.csv
 tests/data/9514-SG.csv
 tests/data/SEPA_River_Levels_Web.csv
+tests/data/133094-SG.csv
