--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 data/rivers-readings-written.json
 data/SEPA_River_Levels_Web.csv
 data/river-sections.json
+data/rivers-readings.json
+data/rivers_download_timestamp
 data/*.csv
 config/database.php
 tests/data/rivers_download_timestamp
