--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ tests/data/9514-SG.csv
 tests/data/SEPA_River_Levels_Web.csv
 tests/data/133094-SG.csv
 config.php
+admin/htpasswd
+data/download_reading_timestamp
