Update map API and add info windows
Updated map API to current standard
Rebuilt some functions to create a table of rivers. This data is now used to populate the map. Added info windows to the map markers.

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,7 @@ tests/data/133094-SG.csv
 config.php
 admin/htpasswd
 data/download_reading_timestamp
+.buildpath
+.project
+.settings/org.eclipse.php.core.prefs
+.settings/org.eclipse.wst.common.project.facet.core.xml
