--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ data/download_reading_timestamp
 .project
 .settings/org.eclipse.php.core.prefs
 .settings/org.eclipse.wst.common.project.facet.core.xml
+farsoncookie
