--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ data/RIVERS_DOWNLOAD_TIMESTAMP
 data/*weather.json
 data/sepa-id-to-riverzone-id.json
 CRON-UPDATE-SEPA-GAUGES-AND-BACKUP-LOCK
+config.ini
