ignore scheduled sections json

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ data/river-zone-stations.json
 data/rivers-readings-written.json
 data/SEPA_River_Levels_Web.csv
 data/river-sections.json
+data/scheduled-sections.json
 data/rivers-readings.json
 data/rivers_download_timestamp
 data/*.csv
